 * Disable aspell; it leaks memory. #1373
 * Deduplicate linkages when overflow forces random selection. #1378 #1396
 * Fix direct dialect settings on connectors. #1382
 * Cleanup dictionary backends. #1391 thru #1395
 * English dict: paraphrasing fixes. #1398
 * Report CPU time usage only for the current thread. #1399
 * Extensive performance optimizations for MST dictionaries. #1402

Version 5.12.0 (26 Nov 2022)
 * Fix crash when using the Atomese dictionary backend.
 * Fix generation tokenization bug when dict has no unknown word token.
 * Major Atomese dictionary extensions, including generation support.
 * Minor tweaks to `any` uniform random parse tree language.
 * Include U+202F NARROW NO-BREAK SPACE as a space character.
 * Fix the various regexes so that they're thread-safe! #1354
 * Maybe(?) fix FreeBSD missing -lstdthreads #1355

Version 5.11.0 (27 Sept 2022)
 * Prototype support for dictionary in the AtomSpace.
 * English dict: assorted missing nouns, verbs. #1289
 * Performance improvements. #1309
 * Fix Windows build break in 5.10.4, 5.10.5 fixed in #1313
 * Fix "amy" language #1312
 * Fix multilib systems, e.g. elf32-i386 #1314
 * Corrected grapheme support for random morpheme sampling. #1315
 * Thai language dictionary updates #1322
 * Punctuation fixes #1331
 * Affixes can now be specified with regexes #1334
 * The regex library PCRE2 is required by default.

Version 5.10.5 (17 June 2022)
 * Updated Docker files. #1288
 * English dict: broader handling of ellipsis.
 * Updated Thai dicts: #1292, #1294
 * Fix Thai regex's to work even with basic C++ regex lib. #1297
 * Performance improvements. #1298

Version 5.10.4 (4 March 2022)
 * English dict: fix relative clause, per mailing list.
 * Remove assorted length restrictions on word-size. #1283
 * Add missing files for building link-generator on Windows. #1285
 * Strip the internally added "._I" from subscripted idioms. #1287
 * New: Provisional Thai dictionary. #1279

Version 5.10.3 (14 Feb 2022)